--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -9,6 +9,14 @@ on:
         description: "Batas maksimal proxy per country"
         required: false
         default: "3"
+      release_branch:
+        description: "Select the release branch:"
+        required: true
+        default: "immortalwrt:24.10.2"
+        type: choice
+        options:
+          - openwrt:24.10.2
+          - immortalwrt:24.10.2
 
 permissions:
   contents: write
