--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -8,7 +8,7 @@ on:
       max_proxies_per_country:
         description: "Batas maksimal proxy per country"
         required: false
-        default: 3
+        default: "3"
   repository_dispatch:
 
 permissions:
