--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -25,7 +25,7 @@ jobs:
       Timeout: 6000
       MaxThreadCount: 96
       SingboxPath: sing-box
-      V2rayFormatResultPath: proxy-build/Asset/proxy_list.txt
+      V2rayFormatResultPath: proxy-build/proxy_list.txt
       Sources: |
         https://raw.githubusercontent.com/Surfboardv2ray/TGParse/main/splitted/mixed
         https://raw.githubusercontent.com/LalatinaHub/Mineral/master/result/nodes
