--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -17,16 +17,8 @@ jobs:
       Timeout: 6000
       MaxThreadCount: 128
       SingboxPath: sing-box
-      V2rayFormatResultPath: list.txt
-      Sources: |
-        https://raw.githubusercontent.com/Surfboardv2ray/TGParse/main/splitted/mixed
-        https://raw.githubusercontent.com/LalatinaHub/Mineral/master/result/nodes
-        https://raw.githubusercontent.com/mheidari98/.proxy/main/all
-        https://raw.githubusercontent.com/MrMohebi/xray-proxy-grabber-telegram/master/collected-proxies/row-url/actives.txt
-        https://raw.githubusercontent.com/hkaa0/permalink/main/proxy/V2ray.txt
-        https://raw.githubusercontent.com/Barabama/FreeNodes/master/nodes/yudou66.txt
-        https://raw.githubusercontent.com/kaoxindalao/v2raycheshi/main/v2raycheshi
-        https://raw.githubusercontent.com/MhdiTaheri/V2rayCollector_Py/main/sub/Mix/mix.txt
+      V2rayFormatResultPath: Asset/list.txt
+      SourcesFile: Asset/sources.txt
 
     steps:
       - name: Set variables
@@ -50,7 +42,7 @@ jobs:
 
       - name: Install sing-box
         run: |
-          sudo dpkg -i source/proxy-build/sing-box.deb
+          sudo dpkg -i source/proxy-build/asset/sing-box.deb
           sudo apt-get install -f
 
       - name: Build proxy list
@@ -82,7 +74,7 @@ jobs:
       - name: Copy build results to asset/Proxy
         run: |
           mkdir -p asset/Proxy
-          cp source/proxy-build/list.txt asset/Proxy/
+          cp source/proxy-build/Asset/list.txt asset/Proxy/
 
       - name: Commit & push Proxy
         run: |
