--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MaxProxiesPerCountry: 3
+      MinActiveProxies: 100
       Timeout: 6000
       MaxThreadCount: 128
       SingboxPath: sing-box
