--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -22,6 +22,7 @@ jobs:
       Timeout: 6000
       MaxThreadCount: 256
       SingboxPath: sing-box
+      SkipProtocols: "vmess,hysteria,hysteria2"
       V2rayFormatResultPath: Asset/list.txt
       SourcesFile: Asset/sources.txt
 
