--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -22,7 +22,7 @@ jobs:
       Timeout: 15000
       MaxThreadCount: 64
       SingboxPath: sing-box
-      SkipProtocols: "trojan,vmess,hysteria,hysteria2"
+      IncludedProtocols: "ss"
       TestUrls: "http://www.gstatic.com/generate_204,http://cp.cloudflare.com,http://edge.microsoft.com/captiveportal/generate_204,http://connectivitycheck.android.com/generate_204"
       V2rayFormatResultPath: Asset/list.txt
       SourcesFile: Asset/sources.txt
