--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -19,10 +19,10 @@ jobs:
       MaxProxiesPerCountry: 3
       MinActiveProxies: 100
       maxRetries: 15
-      Timeout: 5000
+      Timeout: 6000
       MaxThreadCount: 96
       SingboxPath: sing-box
-      IncludedProtocols: "trojan,ss,vless"
+      IncludedProtocols: "ss"
       TestUrls: "http://www.gstatic.com/generate_204,http://cp.cloudflare.com,http://edge.microsoft.com/captiveportal/generate_204,http://connectivitycheck.android.com/generate_204"
       V2rayFormatResultPath: Asset/list.txt
       SourcesFile: Asset/sources.txt
