--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -21,9 +21,8 @@ jobs:
       maxRetries: 15
       Timeout: 6000
       MaxThreadCount: 96
-      LitePath: Asset/lite
-      LiteConfigPath: Asset/config.json
-      IncludedProtocols: "ss,trojan,vless,vmess"
+      SingboxPath: sing-box
+      IncludedProtocols: "ss,trojan,vless"
       TestUrls: "http://www.gstatic.com/generate_204,http://cp.cloudflare.com,http://edge.microsoft.com/captiveportal/generate_204,http://connectivitycheck.android.com/generate_204,http://wifi.vivo.com.cn/generate_204,http://detectportal.firefox.com/canonical.html,http://quasar.yandex.net/generate_204"
       V2rayFormatResultPath: Asset/list.txt
       SourcesFile: Asset/sources.txt
@@ -47,6 +46,11 @@ jobs:
           fetch-depth: 1
           ref: main
           path: source
+
+      - name: Install sing-box
+        run: |
+          sudo dpkg -i source/proxy-build/Asset/*.deb
+          sudo apt-get install -f
 
       - name: Build proxy list
         run: |
