--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -5,7 +5,7 @@ on:
     - cron: "0 18 * * *"
   push:
     paths:
-      - "proxy-build/"
+      - "proxy-build/**"
   workflow_dispatch:
   repository_dispatch:
 
@@ -22,7 +22,7 @@ jobs:
       Timeout: 6000
       MaxThreadCount: 96
       SingboxPath: sing-box
-      IncludedProtocols: "ss,trojan,vless"
+      IncludedProtocols: "ss"
       TestUrls: "http://www.gstatic.com/generate_204,http://cp.cloudflare.com,http://edge.microsoft.com/captiveportal/generate_204,http://connectivitycheck.android.com/generate_204,http://wifi.vivo.com.cn/generate_204,http://detectportal.firefox.com/canonical.html,http://quasar.yandex.net/generate_204"
       V2rayFormatResultPath: Asset/list.txt
       SourcesFile: Asset/sources.txt
