--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 9.0.x
+          dotnet-version: 8
 
       - name: Checkout main branch
         uses: actions/checkout@v5
