--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -24,7 +24,7 @@ jobs:
       SingboxPath: sing-box
       LitePath: Asset/lite
       LiteConfigPath: Asset/config.json
-      IncludedProtocols: "ss,trojan,vless"
+      IncludedProtocols: "ss,trojan,vless,vmess"
       TestUrls: "http://www.gstatic.com/generate_204,http://cp.cloudflare.com,http://edge.microsoft.com/captiveportal/generate_204,http://connectivitycheck.android.com/generate_204,http://wifi.vivo.com.cn/generate_204,http://detectportal.firefox.com/canonical.html,http://quasar.yandex.net/generate_204"
       V2rayFormatResultPath: Asset/list.txt
       SourcesFile: Asset/sources.txt
