--- a/proxy-build/Asset/config.json
+++ b/proxy-build/Asset/config.json
@@ -1,11 +1,11 @@
 {
     "group":"job",
     "speedtestMode":"pingonly",
-    "pingMethod":"googleping",
+    "pingMethod":"tcpping",
     "sortMethod":"ping",
-    "concurrency":1024,
+    "concurrency":4096,
     "testMode":2,
-    "timeout":16,
+    "timeout":2,
     "language":"en",
     "fontSize":24,
     "theme":"rainbow",
