--- a/proxy-build/Asset/config.json
+++ b/proxy-build/Asset/config.json
@@ -1,13 +1,14 @@
 {
     "group":"job",
     "speedtestMode":"pingonly",
-    "pingMethod":"tcpping",
+    "pingMethod":"googleping",
     "sortMethod":"ping",
-    "concurrency":4096,
+    "concurrency":10,
     "testMode":2,
-    "timeout":2,
+    "timeout":10,
     "language":"en",
     "fontSize":24,
     "theme":"rainbow",
+    "unique":true,
     "outputMode": 4
 }
