--- a/proxy-build/ProxyCollector.csproj
+++ b/proxy-build/ProxyCollector.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Octokit" Version="13.0.1" />
     <PackageReference Include="SingBoxLib" Version="1.1.11" />
+    <PackageReference Include="MaxMind.GeoIP2" Version="5.3.0" />
   </ItemGroup>
 
   <ItemGroup>
