--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MaxProxiesPerCountry: 3
-      MinActiveProxies: 100
+      MinActiveProxies: 20
       maxRetries: 5
       Timeout: 15000
       MaxThreadCount: 128
@@ -26,7 +26,8 @@ jobs:
       TestUrls: "http://www.gstatic.com/generate_204,http://cp.cloudflare.com,http://edge.microsoft.com/captiveportal/generate_204,http://wifi.vivo.com.cn/generate_204,http://quasar.yandex.net/generate_204"
       V2rayFormatResultPath: Asset/list.txt
       SourcesFile: Asset/sources.txt
-      GeoLite2DbPath: Asset/GeoLite2-Country.mmdb
+      GeoLiteCountryDbPath: Asset/GeoLite2-Country.mmdb
+      GeoLiteAsnDbPath: Asset/GeoLite2-ASN.mmdb
 
     steps:
       - name: Set variables
