--- a/proxy-build/Asset/config.json
+++ b/proxy-build/Asset/config.json
@@ -1,9 +1,9 @@
 {
     "group":"job",
     "speedtestMode":"pingonly",
-    "pingMethod":"googleping",
+    "pingMethod":"tcpping",
     "sortMethod":"ping",
-    "concurrency":10,
+    "concurrency":50,
     "testMode":2,
     "timeout":10,
     "language":"en",
