--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 1
-          ref: main
+          ref: ${{ github.ref_name }}
           path: source
 
       - name: Build proxy list
