--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
     inputs:
       debug:
-        description: "Select kernel version (Amlogic only)."
+        description: "Enable Debuging?"
         required: true
         default: "False"
         type: choice
