--- a/proxy-build/Asset/config.json
+++ b/proxy-build/Asset/config.json
@@ -1,14 +1,13 @@
 {
     "group":"job",
     "speedtestMode":"pingonly",
-    "pingMethod":"tcpping",
+    "pingMethod":"googleping",
     "sortMethod":"ping",
     "concurrency":50,
     "testMode":2,
-    "timeout":2,
+    "timeout":1,
     "language":"en",
     "fontSize":24,
     "theme":"rainbow",
-    "unique":true,
     "outputMode": 4
 }
