--- a/proxy-build/Asset/config.json
+++ b/proxy-build/Asset/config.json
@@ -1,13 +1,14 @@
 {
-    "group":"job",
-    "speedtestMode":"pingonly",
-    "pingMethod":"googleping",
-    "sortMethod":"ping",
-    "concurrency":50,
-    "testMode":2,
-    "timeout":10,
-    "language":"en",
-    "fontSize":24,
-    "theme":"rainbow",
-    "outputMode": 4
+    "group": "proxy-build",
+    "speedtestMode": "pingonly",
+    "pingMethod": "googleping",
+    "sortMethod": "ping",
+    "concurrency": 2048,
+    "testMode": 2,
+    "timeout": 10,
+    "language": "en",
+    "fontSize": 24,
+    "theme": "rainbow",
+    "unique": true,
+    "generatePicMode": 3
 }
