--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -28,7 +28,7 @@ jobs:
       EnableDebug: ${{ github.event.inputs.debug || 'false' }}
       LitePath: Asset/lite
       LiteConfigPath: Asset/config.json
-      IncludedProtocols: "ss"
+      IncludedProtocols: "ss,trojan,vmess,vless"
       V2rayFormatResultPath: Asset/list.txt
       SourcesFile: Asset/sources.txt
       GeoLiteCountryDbPath: Asset/GeoLite2-Country.mmdb
