Update mmdb path

--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -58,11 +58,10 @@ jobs:
         run: |
           cd source/proxy-build
           
-          git clone --depth 1 -b asset https://github.com/${{ github.repository }} Asset
+          # get mmdb file
+          git clone --depth 1 -b asset https://github.com/${{ github.repository }} GEO
 
-          file in *.tar.gz; do
-            tar -xvzf "$file" --wildcards '*.mmdb' --transform='s:.*/::'
-          done
+          for file in GEO/*.tar.gz; do tar -xzf "$file" --wildcards --transform='s:.*/::' -C Asset '*.mmdb'; done
 
           dotnet restore
           dotnet run --configuration Release --project .
