--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -60,18 +60,19 @@ jobs:
         run: |
           cd source/proxy-build
 
-          dotnet restore
+          # dotnet restore
           # dotnet run --configuration Release --project ./Checker/ProxyChecker.csproj
 
       - name: Build proxy list
         run: |
-          pwd
+          cd source/proxy-build
           
           # get mmdb file
           git clone --depth 1 -b asset https://github.com/${{ github.repository }} GEO
 
           for file in GEO/GEO/*.tar.gz; do tar -xzf "$file" --wildcards --transform='s:.*/::' -C Asset '*.mmdb'; done
 
+          dotnet restore
           dotnet run --configuration Release --project ./ProxyCollector.csproj
           cd ../..
 
