--- a/proxy-build/Checker/ProxyChecker.csproj
+++ b/proxy-build/Checker/ProxyChecker.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Program.cs" />
+    <Compile Include="ProxyChecker.cs" />
     <PackageReference Include="SingBoxLib" Version="1.1.11" />
   </ItemGroup>
 
