--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -56,13 +56,6 @@ jobs:
           ref: ${{ github.ref_name }}
           path: source
 
-      - name: Build source chekcer
-        run: |
-          cd source/proxy-build
-
-          # dotnet restore Checker/ProxyChecker.csproj
-          # dotnet run --configuration Release --project ./Checker/ProxyChecker.csproj
-
       - name: Build proxy list
         run: |
           cd source/proxy-build
@@ -72,8 +65,8 @@ jobs:
 
           for file in GEO/GEO/*.tar.gz; do tar -xzf "$file" --wildcards --transform='s:.*/::' -C Asset '*.mmdb'; done
 
-          dotnet restore ProxyCollector.csproj
-          dotnet run --configuration Release --project ProxyCollector.csproj
+          dotnet restore ./ProxyCollector.csproj
+          dotnet run --configuration Release --project ./ProxyCollector.csproj
           cd ../..
 
       - name: Prepare local repo for 'asset' branch (create if missing)
