--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -59,6 +59,8 @@ jobs:
       - name: Run source checker
         run: |
           cd source/source-checker
+          mkdir -p Asset
+          cp ../source/proxy-build/sources.txt Asset/
 
           dotnet restore
           dotnet run --configuration Release --project .
