--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           cd source/source-checker
           mkdir -p Asset
-          cp ../source/proxy-build/sources.txt Asset/
+          cp ../proxy-build/sources.txt Asset/
 
           dotnet restore
           dotnet run --configuration Release --project .
